objects/HealthCloudGA__CarePlanTemplateTask__c/fields/HealthCloudGA__AssignedTo__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__AssignedTo__c</fullName>
    <label>Assigned To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Patient</fullName>
            </value>
            <value>
                <fullName>CARTCoordinator</fullName>
                <label>CAR-T Coordinator</label>
            </value>
            <value>
                <fullName>CellTherapyOrderSpecialist</fullName>
                <label>Cell Therapy Order Specialist (CTOS)</label>
            </value>
            <value>
                <fullName>Physician</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>