objects/HealthCloudGA__CarePlanTemplateTask__c/fields/HealthCloudGA__Type__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Automated</fullName>
                <default>true</default>
                <label>Automated</label>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Administrative</fullName>
                <isActive>false</isActive>
                <label>Administrative</label>
            </value>
            <value>
                <fullName>Clinical</fullName>
                <isActive>false</isActive>
                <label>Clinical</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Uncategorized</fullName>
                <isActive>false</isActive>
                <label>Uncategorized</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>